# InventoryAI

./: README.md
backend/: .env  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  forecast.py  health.py  upload.py
backend/app/core/: config.py
backend/app/db/: base.py  mixins.py  session.py
backend/app/models/: __init__.py  company.py  dataset.py  forecast.py  user.py
backend/app/schemas/: __init__.py  base.py  forecast.py
backend/app/services/: forecast.py
backend/tests/: __init__.py  test_forecast.py  test_health.py
docs/: features.md  implementation_plan.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/forecasts/: page.tsx
frontend/src/components/: theme-provider.tsx  theme-toggle.tsx
frontend/src/components/dashboard/: ai-insights-panel.tsx  dashboard-cards.tsx  forecast-chart.tsx  forecast-table.tsx
frontend/src/components/layout/: navbar.tsx
frontend/src/components/procurement/: po-generator.tsx
frontend/src/components/providers/: app-providers.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx
frontend/src/components/upload/: file-uploader.tsx
frontend/src/hooks/: use-forecast-data.ts
frontend/src/lib/: api-client.ts  mock-data.ts  types.ts  utils.ts
landing-page/src/app/: globals.css  layout.tsx  page.tsx
(+3 files in other folders)
