[project]
name = "inventoryai-backend"
version = "0.1.0"
description = "FastAPI backend service for InventoryAI MVP"
requires-python = ">=3.11"
authors = [
  { name = "InventoryAI Team" }
]
license = { text = "Proprietary" }
readme = "README.md"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.29",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "pydantic>=2.6.4",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "pandas>=2.1.4",
  "numpy>=1.26.4",
  "openpyxl>=3.1.2",
  "pyarrow>=15.0.0",
  "statsmodels>=0.14.1",
  "scikit-learn>=1.4.2",
  "httpx>=0.27.0",
  "tenacity>=8.2.3",
  "loguru>=0.7.2"
]

[project.optional-dependencies]
forecast-prophet = ["prophet>=1.1.5"]
llm = ["openai>=1.20.0"]
dev = [
  "ruff>=0.4.1",
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.5",
  "pytest-cov>=5.0.0",
  "mypy>=1.9.0",
  "types-python-dateutil"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "ASYNC", "TCH"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app"]
combine-as-imports = true
force-single-line = true

[tool.pytest.ini_options]
addopts = "--strict-markers --disable-warnings"
testpaths = ["tests"]


